# Coral-TPU

./: .gitignore  README.md  create_model.py  pull_data_from_tpu_host.sh  push_to_tpu_host.sh  run_model.py  test_log_helper.py
conv2d/: conv2d_1_300_300_1.tflite  create_model.py  run_model.py
conv2d/models/: conv2d_1_300_300_1_quant.tflite  conv2d_1_300_300_1_quant_edgetpu.tflite
depthwise_conv2d/: create_model.py  depthwise_conv2d_f32_1_300_300_3.tflite  run_model.py
depthwise_conv2d/models/: depthwise_conv2d_1_300_300_3.tflite  depthwise_conv2d_1_300_300_3_quant.tflite  depthwise_conv2d_1_300_300_3_quant_edgetpu.tflite
elementary-ops/: Makefile  create_model.py  prepare_input_for_model.py  pull_data_from_tpu_host.sh  run_model.cpp  run_model.py  run_model_deprecated.py  setup.py  setup_inputs_and_golds.py
elementary-ops/golden/: golden_rand_conv_2d_1_1000_1000_1_40_40_1_1_quant_edgetpu.out.1  (+3 more)
elementary-ops/include/: Makefile
include/: example_log.c  example_log_python.py
libLogHelper/: .gitignore  CMakeLists.txt  README.md
libLogHelper/examples/: CMakeLists.txt  example_log.c
models/: conv_2d_1_1500_1500_1.tflite  conv_2d_1_300_300_1_quant_edgetpu.tflite
neural-networks/: .gitignore  check_critical_sdcs.py  corrupt_out_file.py  create_input_images_list.py  create_inputs_list.py  patch_output_file.py  pull-sdc-out-files.sh  run_classification.py  run_detection.py  setup.py  test_classification.py  test_det_model_with_dataset.py  test_detection.py
scripts/: create_json_param.sh  notify_beam_status.sh
tflite-aarch64/: Dockerfile  build.sh
(+126 files in other folders)
